# AURA

./: .gitignore  CLAUDE.md  README.md  environment.yml  pyproject.toml  start.sh
configs/: settings.example.yaml
configs/arms/: settings.example.yaml
configs/assemblies/: assem_gearbox.json  assembled_gearbox_smaller.json  tmpopyxnzul.json  tmpvkxaqrum.json
configs/overrides/: test_assembly.json
docs/: extraction-guide.md
frontend/: package-lock.json  package.json
frontend/app/: globals.css  page.tsx
frontend/app/about/: page.tsx
frontend/app/blog/: page.tsx
frontend/app/docs/: layout.tsx  page.tsx
frontend/app/landing/: page.tsx
frontend/components/: BottomBar.tsx  CameraPiP.tsx  DemoBanner.tsx  Providers.tsx  RecordingControls.tsx  RunControls.tsx  StepCard.tsx  StepDetail.tsx  StepList.tsx  TeleopToggle.tsx  TopBar.tsx  TrainingProgress.tsx  UploadPreview.tsx
frontend/components/landing/: ArchitectureGrid.tsx  LandingViewer.tsx
frontend/components/setup/: ArmCard.tsx  ArmsTab.tsx  CalibrationTab.tsx  CamerasTab.tsx  PairingsTab.tsx  SetupModal.tsx  SystemTab.tsx  ToolsTab.tsx
frontend/components/viewer/: AnimationController.tsx  AnimationTimeline.tsx  AssemblyViewer.tsx  ExecutionCameraController.tsx  GlbErrorBoundary.tsx  GroundPlane.tsx  PartMesh.tsx  ViewerControls.tsx
frontend/context/: AssemblyContext.tsx  ExecutionContext.tsx  TeachingContext.tsx  WebSocketContext.tsx
frontend/lib/: animation.ts  api.ts  blog-posts.ts  colors.ts  docs-content.ts  executionAnimation.ts  hooks.ts  mock-data.ts  types.ts  ws.ts
nextis/: __init__.py  config.py  errors.py  state.py
nextis/analytics/: __init__.py
nextis/api/: __init__.py  app.py  schemas.py
nextis/api/routes/: analytics.py  assembly.py  calibration.py  cameras.py  datasets.py  execution.py  (+9 more)
nextis/assembly/: __init__.py  ai_planner.py  cad_parser.py  contact_analysis.py  grasp_planner.py  layout.py  mesh_utils.py  models.py  sequence_planner.py
nextis/cameras/: __init__.py  discovery.py  service.py
nextis/control/: __init__.py  joint_mapping.py
nextis/execution/: __init__.py  policy_router.py  sequencer.py
nextis/hardware/: __init__.py  arm_registry.py  calibration.py  connection.py  diagnostics.py  scanning.py  types.py
nextis/learning/: __init__.py  dataset.py  dataset_service.py  diffusion_policy.py  flow_policy.py  policy_loader.py  recorder.py  replay_buffer.py  reward.py  rl_trainer.py  sac.py  trainer.py  training_service.py
nextis/perception/: __init__.py  verifier.py
nextis/tools/: __init__.py  registry.py  types.py
scripts/: setup_can.sh  validate_hardware.py
tests/: test_api.py  test_cad_parser.py  test_calibration.py  test_config_system.py  test_contact_analysis.py  test_grasp_planner.py  test_layout.py  test_rl_trainer.py  test_sequence_planner.py
(+1 files in other folders)
